RESOLVED FIXED266291
Registered scripts aren't injected when an extension is reloaded
https://bugs.webkit.org/show_bug.cgi?id=266291
Summary Registered scripts aren't injected when an extension is reloaded
Kiara Rose
Reported 2023-12-12 10:13:28 PST
Unload registered scripts to avoid duplicate scripts if the extension is reloaded.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-12 10:13:40 PST
Kiara Rose
Comment 2 2024-03-25 07:23:13 PDT
EWS
Comment 3 2024-03-28 16:36:00 PDT
Committed 276810@main (001f6f0f9589): <https://commits.webkit.org/276810@main> Reviewed commits have been landed. Closing PR #26434 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.