Source/WebKit/Shared/Extensions/_WKWebExtensionRegisteredScriptsSQLiteStore.mm
@@ -32,7 +32,6 @@
 
 #import "CocoaHelpers.h"
 #import "Logging.h"
-#import "WebExtensionDynamicScripts.h"
 #import "_WKWebExtensionSQLiteDatabase.h"
 #import "_WKWebExtensionSQLiteHelpers.h"
 #import "_WKWebExtensionSQLiteRow.h"
